--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "license": "MIT",
   "contributor": [],
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
     "gitmoji-cli": "^4.5.1",
-    "husky": "^7.0.2"
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2"
   },
   "scripts": {
     "prepare": "husky install",
